--- a/public/css/pretty.css
+++ b/public/css/pretty.css
@@ -484,32 +484,43 @@ a.share {
 }
 
 /*Comment Section */
+
 .commentcontainer {
-  padding:0.01em 16px;
-  border:1px solid black;
-  background-color:#fdf5e6;
-  background-size: 80px 60px;
-  height: auto;
-  max-height: 1000px;
-  max-width: 900px;
-  margin: auto;
-  width: 75%;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  overflow:auto;
+  overflow:hidden;
+}
+
+.commentcontainer section{
+  min-height:125px;
+  display:block;
 }
 
 #commenttextarea {
-  border:1px solid black;
-  background-color: rgba(255,255,255,0.5);
-  border-radius: 3px;
-  max-width: 90%; 
+  border: 1px solid #e1e8ed;
+  border-radius: 6px;
+  /*background-color: rgba(255,255,255,0.5);*/
+  box-shadow: none;
+  min-height:80px;
+  padding:15px;
+  font-size:15px;
+  overflow:auto;
+  /*margin-left:100px;*/
 }
 .timestamp{
   font-size:10px;
-  border-bottom:1px solid black;
+  color: rgba(0,39,59,.35);
+  font-weight:500;
+  /*border-bottom:1px solid black;*/
+}
+
+.nicegrey {
+  color: rgba(0,39,59,.35);
+  font-weight:500;
 }
 .purplelevel{
   color: rgb(255, 0, 255); 
+  font-family: inherit;
+  font-size: 15px;
+  font-weight:700;
 }
 
 .bluelevel{
