--- a/views/comic.jade
+++ b/views/comic.jade
@@ -1,13 +1,13 @@
 extends pretty
 
 block content
-	center
-		div(class="dropdown")
-			button(class="dropbtn") Page Selection
-			div(class="dropdown-content")
-				- var i = 1
-				while i <= maxpageid
-						a(href="/accounts/" + comic_creator + "/comics/" + comic_uri + "/pages/" + i++ + url_append) Page #{i-1}
+	//- center
+	//- 	div(class="dropdown")
+	//- 		button(class="dropbtn") Page Selection
+	//- 		div(class="dropdown-content")
+	//- 			- var i = 1
+	//- 			while i <= maxpageid
+	//- 					a(href="/accounts/" + comic_creator + "/comics/" + comic_uri + "/pages/" + i++ + url_append) Page #{i-1}
 	block content_comic
 	center
 		p
