list of subscriptions aren't showing after adding conditionals in jade

--- a/public/css/pretty.css
+++ b/public/css/pretty.css
@@ -486,11 +486,13 @@ a.share {
 
 .commentcontainer {
   overflow:hidden;
+
 }
 
 .commentcontainer section{
   min-height:125px;
   display:block;
+  background-color: gray;
 }
 
 #commenttextarea {
