--- a/views/profile.jade
+++ b/views/profile.jade
@@ -31,12 +31,14 @@ block content
 						div(id="custom_carousel" class="carousel slide dashboardcomicbox")
 							div(class="controls")
 								ul(class="nav nav-tabs" role="tablist" style="padding-top:10px")
-									li(role="presentation" class="active" data-target="#custom_carousel" data-slide-to="0")
-										a(href="#" aria-controls="comics" role="tab" data-toggle="tab")
-											small Comics
-									li(role="presentation" data-target="#custom_carousel" data-slide-to="1")
-										a(href="#" aria-controls="subscriptions" role="tab" data-toggle="tab")
-											small Subscriptions
+									if(comics_length != 0)
+										li(role="presentation" class="active" data-target="#custom_carousel" data-slide-to="0")
+											a(href="#" aria-controls="comics" role="tab" data-toggle="tab")
+												small Comics
+									if(isartist == false)
+										li(role="presentation" data-target="#custom_carousel" data-slide-to="1")
+											a(href="#" aria-controls="subscriptions" role="tab" data-toggle="tab")
+												small Subscriptions
 									//- li(data-target="#custom_carousel" data-slide-to="2")
 									//- 	a(href="#")
 									//- 		img(src="http://placehold.it/50x50")
@@ -45,30 +47,37 @@ block content
 									//- 	a(href="#")
 									//- 		img(src="http://placehold.it/50x50")
 									//- 		small Slide Four
-							hr
+							<br />
 							div(class="carousel-inner")
+							if(comics_length != 0)
 								div(class="item active")
 									div(class="container-fluid")
+										b #{username}'s Comics
 										div(class="col-md-3")
 											img(src="http://placehold.it/350x250" class="img-responsive")
 										div(class="col-md-9")
-											h2 Comics
-								//- 			if(isartist == true && comics_length != 0)
-								//- 				p Created Comics
-								//- 			if(isartist == false && comics_length != 0)
-								//- 				p My Comics
-								//- 			ul
-								//- 				each comic, i in comics
-								//- 					li
-								//- 						a(href="/accounts/" + comic.creator + "/comics/" + comic.uri)= comic.title
+												if(comics_length != 0) 
+												ul
+													each comic, i in comics
+														li
+															a(href="/accounts/" + comic.creator + "/comics/" + comic.uri)= comic.title
+							//- 			if(isartist == true && comics_length != 0)
+							//- 				p Created Comics
+							//- 			if(isartist == false && comics_length != 0)
+							//- 				p My Comics
+							//- 			ul
+							//- 				each comic, i in comics
+							//- 					li
+							//- 						a(href="/accounts/" + comic.creator + "/comics/" + comic.uri)= comic.title
+							if(isartist == false)
 								div(class="item")
 									div(class="container-fluid")
+										b #{username}'s Subscriptions
 										div(class="col-md-3")
 											img(src="http://placehold.it/350x250" class="img-responsive")
 										div(class="col-md-9")
-											h2 Subscriptions
-											if (shouldShowSubscription == true) 
-												p Subscriptions: #{subscriptions}
+										if(shouldShowSubscription == true) 
+											p #{subscriptions}
 								//- div(class="item")
 								//- 	div(class="container-fluid")
 								//- 		div(class="col-md-3")
