--- a/views/editdashboard.jade
+++ b/views/editdashboard.jade
@@ -5,24 +5,25 @@ block content
 	form(ng-init="comics=#{comics_js}")
 	p(class="form-subtitle") Dashboard
 	form(method='post' enctype='multipart/form-data' action= '/editdashboard')
-		p Avatar 
+		p -Avatar- 
 		input(type="file" name="image" id='image_upload')
-		p Description
+		p -Description-
 		input(type="text" name="description" placeholder="Enter Description..")
-		p Name
+		p -Name-
 		input(type="text" name="name" placeholder="Enter Name...")
-		p Email
+		p -Email-
 		input(type="email" name="email" placeholder="Change Email...")
-		p Location
+		p -Location-
 		input(type="text" name="location" placeholder="Enter Location...")
 		//- p Time Zone
-		p Add Link to Other Sites
+		p -Add Link to Other Sites-
 		input(type="text" name="link" placeholder="Enter Link...")
 
-		if(isartist == false)
-			p Subscription List
+		if(isartist == false) 
+			p -Subscription List-
 			input(type="radio" name="shouldShowSubscription" value=true)
 			b Show
+			<br />
 			input(type="radio" name="shouldShowSubscription" value=false)
 			b Hide
 			
