--- a/views/editdashboard.jade
+++ b/views/editdashboard.jade
@@ -19,7 +19,7 @@ block content
 		p -Add Link to Other Sites-
 		input(type="text" name="link" placeholder="Enter Link...")
 
-		if(isartist == false) 
+		if(isartist != true) 
 			p -Subscription List-
 			input(type="radio" name="shouldShowSubscription" value=true)
 			b Show
