fix comment resizing

--- a/views/adminpage.jade
+++ b/views/adminpage.jade
@@ -4,7 +4,7 @@ block content
 	h1 Permissions Page for "#{title}"
 	hr
 	h2 Viewing Permissions
-	div(id=viewlistdiv1)
+	div(id="viewlistdiv1")
 		p Comic viewlist: #{viewlist.length}
 		p
 			each user, i in viewlist
@@ -21,7 +21,7 @@ block content
 			font(color="red") {{response1}}
 	hr
 	h2 Collaboration Permissions
-	div(id=editlistdiv2) 
+	div(id="editlistdiv2") 
 		p Comic editlist: #{editlist.length}
 		p
 			each user, i in editlist
