--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,7 +31,7 @@ html
                         div(class="container")
                             div(class="row")
                                 div(class="col-md-4 col-md-offset-4 text-center")
-                                    p WELCOME TO DROPTABLECOMIX! <br /> WE ARE YOUR ONE STOP TO COMIX FREEDOM
+                                    p WELCOME TO DROPTABLECOMIX! <br /> WE ARE YOUR ONE STOP FOR COMIX FREEDOM
                             hr
                             div(id="copyright")
                                 |site design / logo © 2016 DropTable Students Inc; Arman, Edward, Noah, Tina <br />
