--- a/views/viewcomic.jade
+++ b/views/viewcomic.jade
@@ -5,9 +5,10 @@ block content_comic
 	meta(property='og:type', content='website')
 	meta(property='og:title', content='DropComix')
 	meta(property='og:description', content='Your description')
-	header
+	div
 		div(class="row")
-			h1 #{comic_name} Page #{pageid}
+			p(class="titleleft") #{comic_name} 
+				span(class="titleleftsmall") Page #{pageid}
 			div(class="col-md-4")
 				if (description)
 					p(class="nicegrey")
@@ -16,34 +17,38 @@ block content_comic
 	//- if (pagename)
 	//- 	h2.bannertext= pagename
 	div(class="row")
-		div(class="col-md-4")
+		div(class="pull-left")
 			if (editable)
 				p
-					a(class="btn btn-primary btn-xs" href="/accounts/" + comic_creator + "/comics/" + comic_uri + "/pages/" + pageid + "/edit") Edit page
-		div(class="col-md-offset-6 col-md-2")
-				div
-					center
-						div(class="dropdown")
-							button(class="dropbtn") Page Selection
-							div(class="dropdown-content")
-								- var i = 1
-								while i <= maxpageid
-										a(href="/accounts/" + comic_creator + "/comics/" + comic_uri + "/pages/" + i++ + url_append) Page #{i-1}
-	if (panels.length>0)
-		center
-			div(class="comicpage" style="width:1000px;position:relative;")
-				span(id="page-area")
-					each pic, i in panels
-						span
-							img(src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic style="position:relative;" alt="panel "+i)
-					each pic, i in overlays
-						span(style="position: absolute;top:0;left:0;")
-							img(src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic.panelID style="position:absolute;left:"+(pic.x+500)+"px;top:" + pic.y + "px;")
+					a(class="btn btn-primary" href="/accounts/" + comic_creator + "/comics/" + comic_uri + "/pages/" + pageid + "/edit") Edit page
+		div(class="pull-right")
+			div(class="dropdown")
+				button(class="dropbtn") Page Selection 
+					span(class="caret")
+				div(class="dropdown-content")
+					- var i = 1
+					while i <= maxpageid
+							a(href="/accounts/" + comic_creator + "/comics/" + comic_uri + "/pages/" + i++ + url_append) Page #{i-1}
+	br
+	div(class="row")
+		if (panels.length>0)
+			center
+				div(class="comicpage" style="width:1000px;position:relative;")
+					span(id="page-area")
+						each pic, i in panels
+							span
+								img(src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic style="position:relative;" alt="panel "+i)
+						each pic, i in overlays
+							span(style="position: absolute;top:0;left:0;")
+								img(src="/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic.panelID style="position:absolute;left:"+(pic.x+500)+"px;top:" + pic.y + "px;")
 	//- hidden preloading bit
 	div(align="right")
 		span(id="page-area-preload")
 				each pic, i in next_panels 
 					img(src= "/accounts/"+comic_creator+"/comics/"+comic_uri+"/panels/"+pic, alt="panel "+i, hidden)
+	br
+block content_sharing
+	br
 	p
 		a.share(ng-href="#share" ng-click="shlink='#{share_link}'")
 			img(src="/images/icon_share.png" alt="share")
@@ -54,21 +59,21 @@ block content_comic
 			| &nbsp;
 			a(href="https://www.facebook.com/sharer/sharer.php?u="+"#{share_link}" target="_blank" ) Share on Facebook
 			|  | 
-			a(class="twitter-share-button"  href="https://twitter.com/intent/tweet?text=#{share_link}") Tweet
+			a(class="twitter-share-button" src="https://platform.twitter.com/widgets.js" href="https://twitter.com/intent/tweet?text=#{share_link}") Tweet
 	button(ng-click = "subscribe_comic('#{comic_uri}')" ng-show = "!isartist") Subscribe
-	p Collaborators:
+	p <i> Collaborators: 
 		each user, i in editlist
-			li
-				p #{user}
+			span #{user}, 
+			</i>
 block content_comment
 	div(class="commentcontainer")
 		div(class="col-md-8 col-md-offset-2")
 			h2 Comment on the page
 			hr
-			div(class="row")
-				div(class="col-md-2")
+			div(class="row" style="margin:5%")
+				div(class="pull-left")
 					img(alt="#{username}" src="/accounts/#{username}/avatar" class="twPc-avatarImg center-block")
-				div(class="col-md-10")
+				div(class="pull-right" style="width:calc(100% - 80px)")
 					p
 						textarea(class="noresize form-control" id="commenttextarea" type="text" ng-model="comment_input" placeholder="Enter comment here... (Maximum 150 characters)" ng-maxlength="150")
 						div(class="text-right")
@@ -78,18 +83,18 @@ block content_comment
 			hr
 			div(style="max-height:1500px;overflow:auto;overflow-x:hidden")
 				each comment, i in comments
-					div(class="row")
-						div(class="col-md-2")
-							div(style="padding-top:20px;padding-bottom:20px")
+					div(class="row" style="margin:5%")
+						div(class="pull-left")
+							div
 								img(alt="#{comment.username}" src="/accounts/#{comment.username}/avatar" class="twPc-avatarImg center-block")
-						div(class="col-md-10")
-							div(style="padding-top:30px")
+						div(class="pull-right" style="width:calc(100% - 80px)")
+							div(style="padding-top:3%")
 								if comment.adminlevel == 2
 									header
 										span
 											a(class="purplelevel" href="/profile/#{comment.username}") #{comment.username}   
 										span
-											span(class="nicegrey") &nbsp;&nbsp;-&nbsp;&nbsp;    
+											span(class="nicegrey") &nbsp;-&nbsp;   
 											span(class="timestamp") #{comment.postDate}
 									p
 										|#{comment.description}  <br />
