--- a/views/changepassword.jade
+++ b/views/changepassword.jade
@@ -6,13 +6,13 @@ block content
 	p(class="form-subtitle") Change Password
 	form(method='post', enctype='multipart/form-data', action='/changepassword')
 
-		p -New Password-
+		p(class="dashboard_a") -New Password-
 		input(type="password" name="newpass" placeholder="Enter New Password...")
 
-		p -Confirm Password-
+		p(class="dashboard_b") -Confirm Password-
 		input(type="password" name="confirmpass" placeholder="Confirm Password...")
 
-		p -Old Password-
+		p(class="dashboard_a") -Old Password-
 		input(type="password" name="oldpass" placeholder="Enter Old Password...")
 
 		p
