--- a/views/pretty.jade
+++ b/views/pretty.jade
@@ -1,6 +1,8 @@
 extends layout
 
 block content_layout
+	div(id="bg")
+		img(src="http://prnt00.deviantart.net/8ee0/b/2015/004/0/0645dcf7471eb88536ba635d5759a57c-pm93sj.jpg" alt="")
 	nav(class="navbar navbar-default navbar-static-top")
 		div(class="container-fluid")
 			div(class="navbar-header")
