--- a/views/editdashboard.jade
+++ b/views/editdashboard.jade
@@ -5,25 +5,32 @@ block content
 	form(ng-init="comics=#{comics_js}")
 	p(class="form-subtitle") Dashboard
 	form(method='post' enctype='multipart/form-data' action= '/editdashboard')
-		p -Avatar- 
+		p(class="dashboard_a")	-Avatar- 
 		input(type="file" name="image" id='image_upload')
-		p -Description-
+		p(class="dashboard_b") -Description- 
+		p(class="dashboard_c") current: #{description}
+		p
 		input(type="text" name="description" placeholder="Enter Description..")
-		p -Name-
-		input(type="text" name="name" placeholder="Enter Name...")
-		p -Email-
+		p(class="dashboard_a") -Name- 
+		p(class="dashboard_c") current: #{name}
+		p
+		input(type="text" name="name" placeholder= "Enter Name...")
+		p(class="dashboard_b") -Email- 
+		p(class="dashboard_c") current: #{email}
+		p
 		input(type="email" name="email" placeholder="Change Email...")
-		p -Location-
+		p(class="dashboard_a") -Location- 
+		p(class="dashboard_c") current: #{location}
+		p
 		input(type="text" name="location" placeholder="Enter Location...")
-		//- p Time Zone
-		p -Add Link to Other Sites-
+		p(class="dashboard_b") -Add Link to Other Sites- 
+		p(class="dashboard_c") current: #{link}
 		input(type="text" name="link" placeholder="Enter Link...")
 
-		if(isartist != true) 
-			p -Subscription List-
+		if(isartist == false) 
+			p(class="dashboard_a") -Subscription List-
 			input(type="radio" name="shouldShowSubscription" value=true)
 			b Show
-			<br />
 			input(type="radio" name="shouldShowSubscription" value=false)
 			b Hide
 			
