--- a/public/css/pretty.css
+++ b/public/css/pretty.css
@@ -63,16 +63,56 @@ position:relative;
   padding-bottom:15px;
   padding-right:15px;
   overflow:auto;
+  background-color:rgba(255, 255, 255, 0.5);
+}
+
+.posrel{
+  position:relative;
+}
+
+.smallcenter {
+    padding:20px;
+    border: 1px solid #e1e8ed;
+    border-radius: 6px;
+    height: wrap-content;
+    width: 500px;
+    margin: auto;
+    position:relative;
+}
+
+.zindex{
+  z-index: 1;
+}
+
+.containeropaque{
+  border: 1px solid #e1e8ed;
+  border-radius: 6px;
+  background-color:rgba(255, 255, 255, 0.5);
+}
+
+.opaquecontainer{
+  min-height:400px;
+  border: 1px solid #e1e8ed;
+  border-radius: 6px;
+  padding-left:15px;
+  padding-bottom:15px;
+  padding-right:15px;
+  background-color:rgba(255, 255, 255, 0.5);
+}
+
+.opaquewhite {
+  background-color:rgba(255, 255, 255, 0.5);
 }
 
 /*Profile card on dashboard*/
 
 .twPc-div {
     background: #fff none repeat scroll 0 0;
+    background-color:rgba(255, 255, 255, 0.5);
     border: 1px solid #e1e8ed;
     border-radius: 6px;
     height: wrap-content;
-    max-width: 100%; // orginal twitter 
+    max-width: 100%;
     width: 100%;
 }
 .twPc-bg {
@@ -291,6 +331,7 @@ form.smallcenter
     width: 500px;
     margin: auto;
 }
+
 /*textarea styling*/
 .noresize {
   resize:none;
