--- a/views/dashboard.jade
+++ b/views/dashboard.jade
@@ -3,9 +3,9 @@ extends pretty
 
 block content
 	div(id="bg")
-		background-colour: white; 
+		img(src="/images/background.png" alt="")
 	form(ng-init="comics=#{comics_js}")
-		div(class="container bs-docs-container")
+		div(class="container bs-docs-container posrel")
 				p(class="form-subtitle") Dashboard
 				div(class="row")
 					
@@ -14,23 +14,21 @@ block content
 						//- form(ng-init="comics=#{comics_js}")
 						div(class="twPc-div")
 							a(class="twPc-bg twPc-block")
+							a(title="#{username}" href="/profile/#{username}" class="twPc-avatarLink")
+								img(alt="#{username}" src="/accounts/#{username}/avatar" class="twPc-avatarImg" style = "float:left")
 							div
 								//- edit information button
 								div(class="twPc-button")
-									a(type="button" href="/editdashboard" class="btn btn-primary" style="padding-top:4px;padding-bottom:4px;  margin: 2px 10px 0;") edit info
+									a(type="button" href="/editdashboard" class="btn btn-primary") edit info
 								//- edit information button end
 								
 								//- change password button
 								div(class="twPc-button")
-									a(type="button" href="/changepassword" class="btn btn-primary"
-									style="padding-top:4px;padding-bottom:4px;margin: 2px 10px 0;") change password
+									a(type="button" href="/changepassword" class="btn btn-primary" style="float:right") change password
 								//- change password button end
-
-							a(title="#{username}" href="/profile/#{username}" class="twPc-avatarLink")
-								img(alt="#{username}" src="/accounts/#{username}/avatar" class="twPc-avatarImg" style = "margin-top: -35px;")
 							div(class="twPc-divUser")
 								div(class="twPc-divName")
-									p(style="padding-left:10px; margin: -50px 0 0 75px;")
+									p(style="padding-left:10px; margin: -40px 0 0 75px;")
 										a(href="/profile/#{username}") #{username}
 								span
 									p(style="padding-left:10px;") Description: #{description} 
@@ -45,10 +43,10 @@ block content
 					div(class="col-md-8" style="padding:15px;")
 						div(id="custom_carousel" class="carousel slide dashboardcomicbox")
 							div(class="controls")
-								ul(class="nav nav-tabs" role="tablist" style="padding-top:10px")
+								ul(class="nav nav-tabs " role="tablist" style="padding-top:10px")
 									if(isartist == true)
 										li(role="presentation" class="active" data-target="#custom_carousel" data-slide-to="0")
-											a(href="#" aria-controls="comics" role="tab" data-toggle="tab")
+											a(href="#" aria-controls="comics" role="tab" data-toggle="tab" style="background-color:rgba(255, 255, 255, 0.5)")
 												small Comics
 									if(isartist == false)
 										li(role="presentation" data-target="#custom_carousel" data-slide-to="1")
@@ -109,7 +107,7 @@ block content
 
 					div(class="col-md-4" style="padding-top:15px")
 						div(class="dashboardcomicbox")
-							b Notifications
+							p(style="padding-top:10px") <b> Notifications <b />
 							hr
 							if(typeof(notifications) !== 'undefined' && notifications_length != 0)
 								ul
