--- a/views/searchresults.jade
+++ b/views/searchresults.jade
@@ -1,35 +1,37 @@
 extends pretty
 
 block content
-	p(class="titleleft") Search results
-	form#aform(name='cat', method='GET')
-		div(class="row")
-			div(class="col-md-4")
-				p Advanced Search:
-					input#asearch(class="form-control" type="text" ng-model="query" placeholder="Search for...")
-		div(class="row")
-			div(class="col-md-2")
-				label 
-					input#searchtitle(type='checkbox' name='title' checked) 
-				|  Title
-				br
-				label 
-					input#searchcreator(type='checkbox' name='creator' checked) 
-				|  Creator
-			div(class="col-md-2")
-				label 
-					input#searchdescription(type='checkbox' name='description' checked) 
-				|  Description
-				br
-				label 
-					input#searchtags(type='checkbox' name='tags' checked) 
-				|  Tags
-				br
-		div(class="row")
-			div(class="col-md-4")
-				input(class="btn btn-primary" type=submit ng-click="a_search()" ng-show = "query.length>0" value='Search For {{query}}') 
-	ul(style="margin-top:40px")
-		p <b><i> Search results: </i></b>
-		each comic, i in comics
-			li
-				a(href="/accounts/" + comic.creator + "/comics/" + comic.uri)= comic.title
+	center
+		p(class="titleleft posrel") Search results
+	div(class="smallcenter opaquewhite")
+		form#aform(name='cat', method='GET')
+			div(class="row")
+				div(class="col-md-12")
+					p Advanced Search:
+						input#asearch(class="form-control" type="text" ng-model="query" placeholder="Search for...")
+			div(class="row")
+				div(class="col-md-6")
+					label 
+						input#searchtitle(type='checkbox' name='title' checked) 
+					|  Title
+					br
+					label 
+						input#searchcreator(type='checkbox' name='creator' checked) 
+					|  Creator
+				div(class="col-md-6")
+					label 
+						input#searchdescription(type='checkbox' name='description' checked) 
+					|  Description
+					br
+					label 
+						input#searchtags(type='checkbox' name='tags' checked) 
+					|  Tags
+					br
+			div(class="row")
+				div(class="col-md-4")
+					input(class="btn btn-primary" type=submit ng-click="a_search()" ng-show = "query.length>0" value='Search For {{query}}') 
+		ul(style="margin-top:40px")
+			p <b><i> Search results: </i></b>
+			each comic, i in comics
+				li
+					a(href="/accounts/" + comic.creator + "/comics/" + comic.uri)= comic.title
