fixed problems with dashboad editing and password chaning page's background; did some more styling

--- a/views/profile.jade
+++ b/views/profile.jade
@@ -33,11 +33,11 @@ block content
 								ul(class="nav nav-tabs" role="tablist" style="padding-top:10px")
 									if(comics_length != 0)
 										li(role="presentation" class="active" data-target="#custom_carousel" data-slide-to="0")
-											a(href="#" aria-controls="comics" role="tab" data-toggle="tab")
+											a(href="#" aria-controls="comics" role="tab" data-toggle="tab" style="background-color:rgba(255, 255, 255, 0.5);")
 												small Comics
 									if(isartist == false)
 										li(role="presentation" data-target="#custom_carousel" data-slide-to="1")
-											a(href="#" aria-controls="subscriptions" role="tab" data-toggle="tab")
+											a(href="#" aria-controls="subscriptions" role="tab" data-toggle="tab" style="background-color:rgba(255, 255, 255, 0.5);")
 												small Subscriptions
 									//- li(data-target="#custom_carousel" data-slide-to="2")
 									//- 	a(href="#")
