--- a/views/searchresults.jade
+++ b/views/searchresults.jade
@@ -4,7 +4,7 @@ block content
 	center
 		p(class="titleleft posrel") Search results
 	div(class="smallcenter opaquewhite")
-		form#aform(name='cat', method='GET')
+		form#aform(name='cat', method='GET' style = "text-align:auto;")
 			div(class="row")
 				div(class="col-md-12")
 					p Advanced Search:
