--- a/views/editdashboard.jade
+++ b/views/editdashboard.jade
@@ -3,39 +3,45 @@ extends pretty
 
 block content
 
-div(class="container")
-	p(class="form-subtitle posrel") Dashboard
-	div(class="smallcenter opaquewhite")
-	form(ng-init="comics=#{comics_js}")
-	form(method='post' enctype='multipart/form-data' action= '/editdashboard')
-		p(class="dashboard_a")	-Avatar- 
-		input(type="file" name="image" id='image_upload')
-		p(class="dashboard_b") -Description- 
-		p(class="dashboard_c") current: #{description}
-		p
-		input(type="text" name="description" placeholder="Enter Description..")
-		p(class="dashboard_a") -Name- 
-		p(class="dashboard_c") current: #{name}
-		p
-		input(type="text" name="name" placeholder= "Enter Name...")
-		p(class="dashboard_b") -Email- 
-		p(class="dashboard_c") current: #{email}
-		p
-		input(type="email" name="email" placeholder="Change Email...")
-		p(class="dashboard_a") -Location- 
-		p(class="dashboard_c") current: #{location}
-		p
-		input(type="text" name="location" placeholder="Enter Location...")
-		p(class="dashboard_b") -Add Link to Other Sites- 
-		p(class="dashboard_c") current: #{link}
-		input(type="text" name="link" placeholder="Enter Link...")
+	div(class="container")
+		p(class="form-subtitle posrel") Dashboard
+		div(class="smallcenter opaquewhite")
+			form(ng-init="comics=#{comics_js}")
+			form(method='post' enctype='multipart/form-data' action= '/editdashboard' style = "text-align:center;")
+				p(class="dashboard_a")	-Avatar- 
+				input(type="file" name="image" id='image_upload' style="margin-left:auto;")
+				p
+				p(class="dashboard_b") -Description- 
+				p(class="dashboard_c") current: #{description}
+				p
+				input(type="text" name="description" placeholder="Enter Description..")
+				p
+				p(class="dashboard_a") -Name- 
+				p(class="dashboard_c") current: #{name}
+				p
+				input(type="text" name="name" placeholder= "Enter Name...")
+				p
+				p(class="dashboard_b") -Email- 
+				p(class="dashboard_c") current: #{email}
+				p
+				input(type="email" name="email" placeholder="Change Email...")
+				p
+				p(class="dashboard_a") -Location- 
+				p(class="dashboard_c") current: #{location}
+				p
+				input(type="text" name="location" placeholder="Enter Location...")
+				p
+				p(class="dashboard_b") -Add Link to Other Sites- 
+				p(class="dashboard_c") current: #{link}
+				input(type="text" name="link" placeholder="Enter Link...")
+				p
 
-		if(isartist == false) 
-			p(class="dashboard_a") -Subscription List-
-			input(type="radio" name="shouldShowSubscription" value=true)
-			b Show
-			input(type="radio" name="shouldShowSubscription" value=false)
-			b Hide
-			
-		p
-		input(type='submit')
+				if(isartist == false) 
+					p(class="dashboard_a") -Subscription List-
+					input(type="radio" name="shouldShowSubscription" value=true)
+					b Show
+					input(type="radio" name="shouldShowSubscription" value=false)
+					b Hide
+					
+				p
+				input(type='submit')
